2026-02-26  Zhengyi Fu  <i@fuzy.me>

	* user-lisp/telega-config.el (telega-root-mode-hook): Enable
	`hl-line-mode'.

2026-02-06  Zhengyi Fu  <i@fuzy.me>

	* init.el (auth-sources): Only change it when it is not customized.

2026-02-05  Zhengyi Fu  <i@fuzy.me>

	* setup.sh: Use git rev-parse to get GIT_DIR for hook installation.

2026-02-03  Zhengyi Fu  <i@fuzy.me>

	* init.el (webjump-sites): Add NixOS Packages and NixOS Options.

2026-02-02  Zhengyi Fu  <i@fuzy.me>

	* init.el (lsp-server-nix-packages): Add elp.

2026-02-02  Zhengyi Fu  <i@fuzy.me>

	* templates/nix.eld: New templates.

2026-02-02  Zhengyi Fu  <i@fuzy.me>

	* init.el (eglot-nix-mode): New global minor mode.
	(lsp-server-nix-packages): New variable.

2026-02-02  Zhengyi Fu  <i@fuzy.me>

	* init.el (proced-format-args@nix): New advice.

2026-01-30  Zhengyi Fu  <i@fuzy.me>

	* transient/values.el (magit-log:magit-log-mode): Remove --graph and --color.

2026-01-30  Zhengyi Fu  <i@fuzy.me>

	Update eglot configuration

	* init.el (lsp-server-nix-packages): New variable.
	(eglot--executable-find, eglot--guess-contact): New advice.
	(+consult-eglot-symbols--highlight): New defun.
	(consult-eglot-symbols): Use `+consult-eglot-symbols--highlight'.

2026-01-29  Zhengyi Fu  <i@fuzy.me>

	Update default completion UI configuration

	* init.el (completions-format): Set to `one-column'.
	(completions-detailed, completions-group): Set to t.
	(completions-sort): Set to `historical'.
	(completions-max-height): Set to 15.
	(minibuffer-visible-completions): Set to `up-down'.
	(completion-eager-update, completion-eager-display): Set to t.
	(completion-auto-help): Set to `always'.
	(completion-show-help, completion-show-inline-help): Set to nil.

2026-01-29  Zhengyi Fu  <i@fuzy.me>

	* user-lisp/gptel-config.el ("Moonshot"): Update moonshot models.

2026-01-27  Zhengyi Fu  <i@fuzy.me>

	Use pipes in compilation-mode

	* init.el (process-use-pipe): New function.

2026-01-27  Zhengyi Fu  <i@fuzy.me>
