@@ -106,6 +106,50 @@
   ;; :request-params '(:tools [(:type "builtin_function" :function (:name "$web_search"))])
   )
 
+(gptel-make-openai "Kimi Code"
+  :host "api.kimi.com"
+  :endpoint "/coding/v1/chat/completions"
+  :stream t
+  :key #'gptel-api-key-from-auth-source
+  :models '((kimi-for-coding
+	     :description "Kimi Code - specialized coding model"
+	     :capabilities (tool-use json)
+	     :context-window 262144)
+	    (kimi-k2-thinking
+	     :description "Kimi K2 Thinking - reasoning model (undocumented)"
+	     :capabilities (reasoning tool-use json)
+	     :context-window 262144)))
+
+(gptel-make-openai "Volcengine Coding"
+  :host "ark.cn-beijing.volces.com"
+  :endpoint "/api/coding/v3/chat/completions"
+  :stream t
+  :key #'gptel-api-key-from-auth-source
+  :models '((ark-code-latest
+	     :description "Ark Code Latest"
+	     :capabilities (reasoning tool-use json)
+	     :context-window 256)
+	    (deepseek-v3.2
+	     :description "DeepSeek V3.2"
+	     :capabilities (reasoning tool-use json)
+	     :context-window 128)
+	    (doubao-seed-code
+	     :description "Doubao Seed Code"
+	     :capabilities (reasoning tool-use json)
+	     :context-window 256)
+	    (glm-4.7
+	     :description "GLM 4.7"
+	     :capabilities (reasoning tool-use json)
+	     :context-window 200)
+	    (kimi-k2-thinking
+	     :description "Kimi K2 thinking"
+	     :capabilities (reasoning tool-use json)
+	     :context-window 256)
+	    (kimi-k2.5
+	     :description "Kimi K2.5"
+	     :capabilities (reasoning tool-use json)
+	     :context-window 256)))
+
 (gptel-make-deepseek "DeepSeek"
   :stream t
   :key #'gptel-api-key-from-auth-source)
@@ -115,8 +159,8 @@
 
 (gptel-make-gh-copilot "Copilot")
 
-(setq-default gptel-backend (gptel-get-backend "DeepSeek"))
-(setq-default gptel-model 'deepseek-chat)
+(setq-default gptel-backend (gptel-get-backend "Volcengine Coding"))
+(setq-default gptel-model 'ark-code-latest)
 
 
 ;;; Tweaks
